--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts,.vue src",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
@@ -16,13 +18,16 @@
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@storybook/vue3-vite": "^9.1.7",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-storybook": "^9.1.7",
     "eslint-plugin-vue": "^10.4.0",
     "prettier": "^3.6.2",
+    "storybook": "^9.1.7",
     "typescript": "~5.8.3",
     "vite": "^7.1.6",
     "vue-tsc": "^3.0.7"
