--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
     "typescript": "~5.8.3",
     "vite": "^7.1.6",
     "vue-tsc": "^3.0.7"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 and TypeScript in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kimdekker/Sound-Matters.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Kimdekker/Sound-Matters/issues"
+  },
+  "homepage": "https://github.com/Kimdekker/Sound-Matters#readme"
 }
