--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@quasar/vite-plugin": "^1.10.0",
     "vue": "^3.5.21"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "sass-embedded": "^1.93.2",
     "storybook": "^9.1.7",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
